--- a/.github/workflows/publish_head.yml
+++ b/.github/workflows/publish_head.yml
@@ -27,8 +27,11 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Check for existing cache
-        id: check-cache
+      - name: Generate Cache Key
+        run: echo "cache_id=mkdocs-material-$(date --utc '+%V')" >> $GITHUB_ENV
+
+      - name: Restore Cached Dependencies
+        id: cache-deps
         uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
@@ -36,16 +39,12 @@ jobs:
           restore-keys: |
             mkdocs-material-
 
-      - name: Generate Cache Key if missing
-        if: steps.check-cache.outputs.cache-hit != 'true'
-        run: echo "cache_id=mkdocs-material-$(date --utc '+%V')" >> $GITHUB_ENV
-
       - name: Install dependencies (if cache is missing)
-        if: steps.check-cache.outputs.cache-hit != 'true'
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
           echo "🔍 Cache not found. Installing dependencies..."
           python -m pip install --upgrade pip
-          pip install --disable-pip-version-check -r requirements.txt mike
+          pip install --disable-pip-version-check -r requirements.txt
           mkdir -p ~/.cache/pip
 
       - name: Check and initialize gh-pages if missing
