--- a/.github/workflows/publish_head.yml
+++ b/.github/workflows/publish_head.yml
@@ -27,22 +27,23 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Generate Cache Key
-        run: echo "cache_id=mkdocs-material-$(date --utc '+%V')" >> $GITHUB_ENV
-
       - name: Restore Cached Dependencies
+        id: cache-deps
         uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: ~/.cache/pip
           restore-keys: |
             mkdocs-material-
-
-      - name: Install mkdocs and dependencies
+        
+      - name: Generate Cache Key (if cache is missing)
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: echo "cache_id=mkdocs-material-$(date --utc '+%V')" >> $GITHUB_ENV
+        
+      - name: Install mkdocs-material and dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --disable-pip-version-check -r requirements.txt
-          mkdir -p ~/.cache/pip
 
       - name: Check and initialize gh-pages if missing
         id: check_branch
