--- a/.github/workflows/publish_head.yml
+++ b/.github/workflows/publish_head.yml
@@ -1,4 +1,4 @@
-name: Publish docs to head
+name: Publish docs
 on:
   push:
     branches:
@@ -44,6 +44,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --disable-pip-version-check -r requirements.txt
+          if [ ! -d "$HOME/.cache/pip" ]; then
+            echo "Creating ~/.cache/pip directory..."
+            mkdir -p ~/.cache/pip
+          fi
 
       - name: Check and initialize gh-pages if missing
         id: check_branch
