--- a/.github/workflows/publish_head.yml
+++ b/.github/workflows/publish_head.yml
@@ -44,10 +44,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --disable-pip-version-check -r requirements.txt
-          if [ ! -d "$HOME/.cache/pip" ]; then
-            echo "Creating ~/.cache/pip directory..."
-            mkdir -p ~/.cache/pip
-          fi
+
+      - name: Save Installed Dependencies to Cache (If Cache Was Missing)
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        uses: actions/cache@v4
+        with:
+          key: mkdocs-material-${{ env.cache_id }}
+          path: ~/.cache/pip
 
       - name: Check and initialize gh-pages if missing
         id: check_branch
