--- a/.github/workflows/publish_head.yml
+++ b/.github/workflows/publish_head.yml
@@ -26,31 +26,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-
-      - name: Restore Cached Dependencies
-        id: cache-deps
-        uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: ~/.cache/pip
-          restore-keys: |
-            mkdocs-material-
-        
-      - name: Generate Cache Key (if cache is missing)
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: echo "cache_id=mkdocs-material-$(date --utc '+%V')" >> $GITHUB_ENV
+          cache: pip
+          cache-dependency-path: requirements.txt
         
       - name: Install mkdocs-material and dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --disable-pip-version-check -r requirements.txt
-
-      - name: Save Installed Dependencies to Cache (If Cache Was Missing)
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: ~/.cache/pip
 
       - name: Check and initialize gh-pages if missing
         id: check_branch
