--- a/.github/workflows/publish_head.yml
+++ b/.github/workflows/publish_head.yml
@@ -29,9 +29,10 @@ jobs:
           cache: pip
           cache-dependency-path: requirements.txt
         
-      - name: Install mkdocs-material and dependencies
+      - name: Install mkdocs and dependencies
         run: |
-          python -m pip install --upgrade pip
+          echo "Checking if dependencies need to be installed..."
+          pip install --upgrade pip
           pip install --disable-pip-version-check -r requirements.txt
 
       - name: Check and initialize gh-pages if missing
